# cpp-cli-template

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
include/propagation/: hello.hpp
